policies/require-cpu-architecture.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-cpu-architecture
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: require-cpu-architecture
      match:
        resources:
          kinds:
            - Deployment
      validate:
        message: "All pods most have nodeAffinity configured with CPU architecture so it always ends up on a node that has a CPU architecture supported by the used OCI image"
        pattern:
          spec:
            template:
              spec:
                affinity:
                  nodeAffinity:
                    requiredDuringSchedulingIgnoredDuringExecution:
                      nodeSelectorTerms:
                        - matchExpressions:
                            - key: kubernetes.io/arch
                              operator: In
      exclude:
        resources:
          namespaces:
            - "kube-system"
            - kyverno
